# ros2-grsim-ssl

./: README.md
grsim_ros_bridge/: package.xml  setup.cfg  setup.py
grsim_ros_bridge/grsim_ros_bridge/: grsim_ros_bridge.py  run_grsim.py
grsim_ros_bridge/launch/: ssl.launch.py
grsim_ros_bridge_msgs/: CMakeLists.txt  package.xml
grsim_ros_bridge_msgs/srv/: SSL.srv
krssg_ssl_msgs/: CMakeLists.txt  package.xml
krssg_ssl_msgs/msg/: BeliefState.msg  Commands.msg  Packet.msg  Replacement.msg  SSLDebugData.msg  SSLDetectionFrame.msg  TacticPacket.msg
ssl-python-clients/ssl_python_clients.egg-info/: PKG-INFO
test_ssl/: package.xml  setup.cfg  setup.py
test_ssl/test_ssl/: my_node.py
vision_comm/: CMakeLists.txt  package.xml
vision_comm/include/vision_comm/: robocup_ssl_client.h
vision_comm/include/vision_comm/proto/: generate_proto.sh
vision_comm/src/: netraw.cpp  robocup_ssl_client.cpp  vision_node.cpp
